# Calculadora-cienticero-Haskel

./: README.md
calculadora-cientifica/: calculadora-cientifica.cabal
calculadora-cientifica/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
calculadora-cientifica/src/: Main.hs
calculadora-cientifica/src/Calculadora/: Basicas.hs  Estadistica.hs  Logaritmos.hs  Parsing.hs  Trigonometria.hs
